--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-title:              '#include'
+title:              'include'
 bio:                ''
 description:        ""
 reading_time:       true
