--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ sass:
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:				contact@42include.me
+email:				contact@42include.me
 #twitter:            username
 #facebook:           username
 #github-url:         username
