--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              include
-bio:                'L\'association de lutte contre les discriminations et stéréotypes à 42'
+bio:                "L'association de lutte contre les discriminations et stéréotypes à 42"
 description:        "Moon is a minimal, one column jekyll theme for your blog."
 reading_time:       true
 words_per_minute:   200
