--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              include
 bio:                "L'association de lutte contre les discriminations et stéréotypes à 42"
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+description:        "L'associa de lutte contre les discriminations et stéréotypes à 42"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
