--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,29 @@
 # Site
-title:              include
-bio:                "L'association de lutte contre les discriminations et stéréotypes à 42"
-description:        "L'asso de lutte contre les discriminations et stéréotypes à 42"
-reading_time:       true
-words_per_minute:   200
-logo:               'assets/img/logo.png'
-background:         'assets/img/placeholder-big.jpg'
-tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
-locale:             fr_FR
-url:                https://42include.me
+title: include
+bio: "L'association de lutte contre les discriminations et stéréotypes à 42"
+description: "L'asso de lutte contre les discriminations et stéréotypes à 42"
+reading_time: true
+words_per_minute: 200
+logo: "assets/img/logo.png"
+background: "assets/img/placeholder-big.jpg"
+tiled_bg: false # Set this true if you want to tile your background image, otherwise it will be covered
+locale: fr_FR
+url: https://42include.me
 
 # Jekyll
-permalink:          /:title/
-markdown:           kramdown
-highlighter:        rouge
+permalink: /:title/
+markdown: kramdown
+highlighter: rouge
 kramdown:
-  auto_ids:         true
-  footnote_nr:      1
-  entity_output:    as_char
-  toc_levels:       1..6
-  enable_coderay:   false
-mathjax:            true
+    auto_ids: true
+    footnote_nr: 1
+    entity_output: as_char
+    toc_levels: 1..6
+    enable_coderay: false
+mathjax: false
 sass:
-  sass_dir:         _sass
-  style:            compressed
+    sass_dir: _sass
+    style: compressed
 
 # Comments
 #disqus_shortname:   taylantatli
@@ -31,20 +31,20 @@ sass:
 # Social
 # if you don't have any of social below, comment the line.
 #google:
-  #plus:            #username
-  #analytics:
-  #verify:
-  #ad-client:
-  #ad-slot:
+#plus:            #username
+#analytics:
+#verify:
+#ad-client:
+#ad-slot:
 #bing-verify:
-email:				contact@42include.me
+email: contact@42include.me
 #twitter:            username
 #facebook:           username
 #github-url:         username
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
-instagram:          42include
+instagram: 42include
 #lastfm:            username
 #tumblr:            username
 #medium:            '@username'
@@ -64,13 +64,27 @@ instagram:          42include
 
 # Gems
 gems:
-  - jekyll-mentions
-  - jekyll-feed
-  - jekyll-sitemap
-  - jekyll-gist
+    - jekyll-mentions
+    - jekyll-feed
+    - jekyll-sitemap
+    - jekyll-gist
 
 jekyll-mentions:
     base_url: https://github.com
 
 # Exclude list
-exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.json, _site, src, vendor, CNAME, LICENSE, Rakefile]
+exclude:
+    [
+        README.md,
+        Gemfile,
+        Gemfile.lock,
+        node_modules,
+        gulpfile.js,
+        package.json,
+        _site,
+        src,
+        vendor,
+        CNAME,
+        LICENSE,
+        Rakefile,
+    ]
